JumpScript/tests/baselines/reference/parserAccessors5.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors5.jump(2,7): error TS1086: An accessor cannot be declared in an ambient context.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors5.jump (1 errors) ====
    declare class C {
      get foo() { return 0; }
          ~~~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    }